# Weregeld

./: .gitignore  CMakeLists.txt
include/: Actions.cpp  Actions.h  GameData.h  JSONReader.cpp  JSONReader.h
resources/: locations.json  locationstest.json  objects.json  objectstest.json
src/: Actions.h  main.cpp
src/Classes/: Actions.cpp  Actions.h  Character.cpp  Character.h  Connection.cpp  Connection.h  Game.cpp  Game.h  Location.cpp  Location.h  Person.cpp  Person.h  Stats.h
src/Classes/Interfaces/: Unlockable.cpp  Unlockable.h
src/Classes/Objects/: Door.cpp  Door.h  Item.cpp  Item.h  Location.cpp  Location.h  Object.cpp  Object.h
src/Classes/Objects/Items/: Key.cpp  Key.h
